--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-proto
 url = http://cran.r-project.org/src/contrib/proto_1.0.0.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/hadley/proto.git
 
 [autospec]
 # build 32 bit libraries
